# prisma-sbom-submit

./: README.md  pyproject.toml
prisma_sbom_submit/: cli.py
