[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prisma-sbom-submit"
authors = [
    {name = "Raphael Michel"},
]
maintainers = [
    {name = "Raphael Michel"},
]
description = "pretix-internal tool to upload SBOMs to our central repository."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dynamic = ["version"]

[project.urls]
Home = "https://github.com/pretix/prisma-sbom-submit"

[project.scripts]
prisma-sbom-submit = "prisma_sbom_submit.cli:cli"

[tool.setuptools.dynamic]
version = {attr = "prisma_sbom_submit.__version__"}